# python-database

./: .env  .gitignore  .replit  RAILWAY_DEPLOYMENT.md  RAILWAY_SETUP.md  README.md  add_sample_data.py  alembic.ini  auth.py  check_railway_db.py  config.py  create_admin.py  create_admin_user.py  crud.py  database.py  debug_auth.py  debug_post_requests.py  deploy_railway.py  diagnose_db.py  fix_api_dependencies.py  fix_auth_credentials.py  fix_corrupted_imports.py  fix_import_order.py  import_data.py  import_railway_data.py  instruments.py  local_dev.db  logger.py  main.py  middleware.py  migrate_add_photo_url.py  migrate_new_collections.py  migrate_to_railway.py  models.py  pyproject.toml  railway.json  railway.toml  replit.md  requirements.txt  schemas.py  (+12 more)
alembic/: env.py
api/: about.py  app_links.py  auth.py  bacteriology_tests.py  biochemistry_tests.py  books.py  dictionary.py  diseases.py  drugs.py  haematology_tests.py  instruments.py  leaderboard.py  normal_ranges.py  notes.py  notifications.py  other_slides.py  other_tests.py  privacy_policy.py  questions.py  serology_tests.py  staff.py  stool_slides.py  tutorial_videos.py  urine_slides.py  users.py
attached_assets/: Pasted--Notification-System-Testing-Guide-Testing-Your-Backend-Integration-Now-that-you-ve-imp-1754138057541_1754138057542.txt  Pasted--conn-connect-dsn-connection-factory-connection-factory-kwasync--1752924851920_1752924851920.txt  Pasted-INFO-database-Connecting-to-database-Traceback-most-recent-call-last-File-frozen-r-1752924144863_1752924144863.txt  (+8 more)
